TD3_Antl/output/tal_sqlParser.java
// $ANTLR 3.5.1 E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g 2019-12-13 09:22:23

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class tal_sqlParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANNEE", "ARTICLE", "BULLETIN", 
		"CONDITION", "CONJ", "DATE", "JOUR", "MOT", "NUM", "NUMERO", "POINT", 
		"RUBRIQUE", "SELECT", "SIGN", "VAR", "WS"
	};
	public static final int EOF=-1;
	public static final int ANNEE=4;
	public static final int ARTICLE=5;
	public static final int BULLETIN=6;
	public static final int CONDITION=7;
	public static final int CONJ=8;
	public static final int DATE=9;
	public static final int JOUR=10;
	public static final int MOT=11;
	public static final int NUM=12;
	public static final int NUMERO=13;
	public static final int POINT=14;
	public static final int RUBRIQUE=15;
	public static final int SELECT=16;
	public static final int SIGN=17;
	public static final int VAR=18;
	public static final int WS=19;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public tal_sqlParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public tal_sqlParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return tal_sqlParser.tokenNames; }
	@Override public String getGrammarFileName() { return "E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g"; }



	// $ANTLR start "listerequetes"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:55:1: listerequetes returns [String sql = \"\"] : r= requete ( POINT )? ;
	public final String listerequetes() throws RecognitionException {
		String sql =  "";


		Arbre r =null;

		Arbre lr_arbre;
		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:56:25: (r= requete ( POINT )? )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:57:3: r= requete ( POINT )?
			{
			pushFollow(FOLLOW_requete_in_listerequetes281);
			r=requete();
			state._fsp--;

			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:57:15: ( POINT )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==POINT) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:57:16: POINT
					{
					match(input,POINT,FOLLOW_POINT_in_listerequetes284); 
					}
					break;

			}


							lr_arbre = r;
							sql = lr_arbre.sortArbre();
						
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return sql;
	}
	// $ANTLR end "listerequetes"



	// $ANTLR start "requete"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:64:1: requete returns [Arbre req_arbre = new Arbre(\"\")] : SELECT ( ARTICLE | BULLETIN | RUBRIQUE | DATE ) (cond1= condition ( CONJ cond2= condition )* ) ;
	public final Arbre requete() throws RecognitionException {
		Arbre req_arbre =  new Arbre("");


		Arbre cond1 =null;
		Arbre cond2 =null;

		Arbre ps_arbre,cond1_arbre,cond2_arbre;
		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:65:50: ( SELECT ( ARTICLE | BULLETIN | RUBRIQUE | DATE ) (cond1= condition ( CONJ cond2= condition )* ) )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:66:3: SELECT ( ARTICLE | BULLETIN | RUBRIQUE | DATE ) (cond1= condition ( CONJ cond2= condition )* )
			{
			match(input,SELECT,FOLLOW_SELECT_in_requete313); 

							req_arbre.ajouteFils(new Arbre("","select distinct"));
						
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:70:3: ( ARTICLE | BULLETIN | RUBRIQUE | DATE )
			int alt2=4;
			switch ( input.LA(1) ) {
			case ARTICLE:
				{
				alt2=1;
				}
				break;
			case BULLETIN:
				{
				alt2=2;
				}
				break;
			case RUBRIQUE:
				{
				alt2=3;
				}
				break;
			case DATE:
				{
				alt2=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:70:4: ARTICLE
					{
					match(input,ARTICLE,FOLLOW_ARTICLE_in_requete325); 

								req_arbre.ajouteFils(new Arbre("","fichier "));
								
					}
					break;
				case 2 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:74:6: BULLETIN
					{
					match(input,BULLETIN,FOLLOW_BULLETIN_in_requete337); 

								req_arbre.ajouteFils(new Arbre("","bulletin "));
								
					}
					break;
				case 3 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:78:6: RUBRIQUE
					{
					match(input,RUBRIQUE,FOLLOW_RUBRIQUE_in_requete349); 

								req_arbre.ajouteFils(new Arbre("","rubrique from public.rubrique r"));
								
					}
					break;
				case 4 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:82:6: DATE
					{
					match(input,DATE,FOLLOW_DATE_in_requete361); 

								req_arbre.ajouteFils(new Arbre("","date "));
								
					}
					break;

			}

			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:88:3: (cond1= condition ( CONJ cond2= condition )* )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:88:4: cond1= condition ( CONJ cond2= condition )*
			{
			pushFollow(FOLLOW_condition_in_requete385);
			cond1=condition();
			state._fsp--;


							//if(cond1.mot != null){req_arbre.ajouteFils(new Arbre("","titreresume tr"));}
							//if(cond1.pdates != null){req_arbre.ajouteFils(new Arbre("","public.date d"));}
							cond1_arbre = cond1;
							req_arbre.ajouteFils(cond1_arbre);
							
						
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:96:3: ( CONJ cond2= condition )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==CONJ) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:96:4: CONJ cond2= condition
					{
					match(input,CONJ,FOLLOW_CONJ_in_requete395); 
					pushFollow(FOLLOW_condition_in_requete401);
					cond2=condition();
					state._fsp--;


									cond2_arbre = cond2;
									req_arbre.ajouteFils(new Arbre("", ","));
									req_arbre.ajouteFils(cond2_arbre);
								
					}
					break;

				default :
					break loop3;
				}
			}

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return req_arbre;
	}
	// $ANTLR end "requete"



	// $ANTLR start "condition"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:106:1: condition returns [Arbre cond_arbre = new Arbre(\"\")] : ( MOT ps= params | RUBRIQUE prubs= pararubs | DATE pdates= paradates | NUMERO pnums= paranums );
	public final Arbre condition() throws RecognitionException {
		Arbre cond_arbre =  new Arbre("");


		Arbre ps =null;
		Arbre prubs =null;
		Arbre pdates =null;
		Arbre pnums =null;

		Arbre mot_arbre, rub_arbre, pdates_arbre, pnums_arbre;
		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:107:65: ( MOT ps= params | RUBRIQUE prubs= pararubs | DATE pdates= paradates | NUMERO pnums= paranums )
			int alt4=4;
			switch ( input.LA(1) ) {
			case MOT:
				{
				alt4=1;
				}
				break;
			case RUBRIQUE:
				{
				alt4=2;
				}
				break;
			case DATE:
				{
				alt4=3;
				}
				break;
			case NUMERO:
				{
				alt4=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:108:3: MOT ps= params
					{
					match(input,MOT,FOLLOW_MOT_in_condition440); 

									cond_arbre.ajouteFils(new Arbre("","from public.titretexte tt"));
									cond_arbre.ajouteFils(new Arbre("","where"));
								
					pushFollow(FOLLOW_params_in_condition453);
					ps=params();
					state._fsp--;


									mot_arbre = ps;
									cond_arbre.ajouteFils(mot_arbre);
								
					}
					break;
				case 2 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:118:5: RUBRIQUE prubs= pararubs
					{
					match(input,RUBRIQUE,FOLLOW_RUBRIQUE_in_condition465); 

									cond_arbre.ajouteFils(new Arbre("","from public.rubrique r"));
									cond_arbre.ajouteFils(new Arbre("","where"));
								
					pushFollow(FOLLOW_pararubs_in_condition478);
					prubs=pararubs();
					state._fsp--;


									rub_arbre = prubs;
									cond_arbre.ajouteFils(rub_arbre);
								
					}
					break;
				case 3 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:128:5: DATE pdates= paradates
					{
					match(input,DATE,FOLLOW_DATE_in_condition490); 

									cond_arbre.ajouteFils(new Arbre("","from public.date d"));
									cond_arbre.ajouteFils(new Arbre("","where"));
								
					pushFollow(FOLLOW_paradates_in_condition503);
					pdates=paradates();
					state._fsp--;


									pdates_arbre = pdates;
									cond_arbre.ajouteFils(pdates_arbre);
								
					}
					break;
				case 4 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:138:5: NUMERO pnums= paranums
					{
					match(input,NUMERO,FOLLOW_NUMERO_in_condition515); 

									cond_arbre.ajouteFils(new Arbre("","from public.titretexte tt"));
									cond_arbre.ajouteFils(new Arbre("","where"));
								
					pushFollow(FOLLOW_paranums_in_condition528);
					pnums=paranums();
					state._fsp--;


									pnums_arbre = pnums;
									cond_arbre.ajouteFils(pnums_arbre);
								
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return cond_arbre;
	}
	// $ANTLR end "condition"



	// $ANTLR start "params"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:150:1: params returns [Arbre les_pars_arbre = new Arbre(\"\")] : par1= param ( CONJ par2= param )* ;
	public final Arbre params() throws RecognitionException {
		Arbre les_pars_arbre =  new Arbre("");


		Arbre par1 =null;
		Arbre par2 =null;

		Arbre par1_arbre, par2_arbre;
		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:151:40: (par1= param ( CONJ par2= param )* )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:152:3: par1= param ( CONJ par2= param )*
			{
			pushFollow(FOLLOW_param_in_params560);
			par1=param();
			state._fsp--;


							par1_arbre = par1;
							les_pars_arbre.ajouteFils(par1_arbre);
						
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:157:3: ( CONJ par2= param )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==CONJ) ) {
					int LA5_1 = input.LA(2);
					if ( (LA5_1==VAR) ) {
						alt5=1;
					}

				}

				switch (alt5) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:157:4: CONJ par2= param
					{
					match(input,CONJ,FOLLOW_CONJ_in_params571); 
					pushFollow(FOLLOW_param_in_params577);
					par2=param();
					state._fsp--;


									par2_arbre = par2;
									les_pars_arbre.ajouteFils(new Arbre("", "OR"));
									les_pars_arbre.ajouteFils(par2_arbre);
								
					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return les_pars_arbre;
	}
	// $ANTLR end "params"



	// $ANTLR start "param"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:166:1: param returns [Arbre lepar_arbre = new Arbre(\"\")] : a= VAR ;
	public final Arbre param() throws RecognitionException {
		Arbre lepar_arbre =  new Arbre("");


		Token a=null;

		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:166:51: (a= VAR )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:167:2: a= VAR
			{
			a=(Token)match(input,VAR,FOLLOW_VAR_in_param605); 
			 lepar_arbre.ajouteFils(new Arbre("tt.mot =", "'"+a.getText()+"'"));
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return lepar_arbre;
	}
	// $ANTLR end "param"



	// $ANTLR start "paranums"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:171:1: paranums returns [Arbre les_paranums_arbre = new Arbre(\"\")] : paranum1= paranum (cj= CONJ paranum2= paranum )* ;
	public final Arbre paranums() throws RecognitionException {
		Arbre les_paranums_arbre =  new Arbre("");


		Token cj=null;
		Arbre paranum1 =null;
		Arbre paranum2 =null;

		Arbre paranum1_arbre,paranum2_arbre;
		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:172:47: (paranum1= paranum (cj= CONJ paranum2= paranum )* )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:173:3: paranum1= paranum (cj= CONJ paranum2= paranum )*
			{
			pushFollow(FOLLOW_paranum_in_paranums635);
			paranum1=paranum();
			state._fsp--;


							paranum1_arbre = paranum1;
							les_paranums_arbre.ajouteFils(paranum1_arbre);
						
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:178:3: (cj= CONJ paranum2= paranum )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==CONJ) ) {
					int LA6_1 = input.LA(2);
					if ( (LA6_1==NUM||LA6_1==SIGN) ) {
						alt6=1;
					}

				}

				switch (alt6) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:178:4: cj= CONJ paranum2= paranum
					{
					cj=(Token)match(input,CONJ,FOLLOW_CONJ_in_paranums647); 
					pushFollow(FOLLOW_paranum_in_paranums653);
					paranum2=paranum();
					state._fsp--;


									paranum2_arbre = paranum2;
									if(cj.getText().equals("et")){
										les_paranums_arbre.ajouteFils(new Arbre("", "AND"));
									}else{
										les_paranums_arbre.ajouteFils(new Arbre("", "OR"));
									}
									les_paranums_arbre.ajouteFils(paranum2_arbre);
								
					}
					break;

				default :
					break loop6;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return les_paranums_arbre;
	}
	// $ANTLR end "paranums"



	// $ANTLR start "paranum"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:191:1: paranum returns [Arbre leparanum_arbre = new Arbre(\"\")] : (s= SIGN )? a= NUM ;
	public final Arbre paranum() throws RecognitionException {
		Arbre leparanum_arbre =  new Arbre("");


		Token s=null;
		Token a=null;

		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:191:57: ( (s= SIGN )? a= NUM )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:192:2: (s= SIGN )? a= NUM
			{
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:192:2: (s= SIGN )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==SIGN) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:192:3: s= SIGN
					{
					s=(Token)match(input,SIGN,FOLLOW_SIGN_in_paranum680); 
					}
					break;

			}

			a=(Token)match(input,NUM,FOLLOW_NUM_in_paranum688); 
			 
						if(s!=null){
							if(s.getText().equals("inferieur")){
								leparanum_arbre.ajouteFils(new Arbre("numero <", "'"+a.getText()+"'"));
							}else if (s.getText().equals("superieur")){
								leparanum_arbre.ajouteFils(new Arbre("numero >", "'"+a.getText()+"'"));
						}}else {
							leparanum_arbre.ajouteFils(new Arbre("numero =", "'"+a.getText()+"'"));
						}
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return leparanum_arbre;
	}
	// $ANTLR end "paranum"



	// $ANTLR start "paradates"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:204:1: paradates returns [Arbre les_paradates_arbre = new Arbre(\"\")] : paradate1= paradate ( CONJ paradate2= paradate )* ;
	public final Arbre paradates() throws RecognitionException {
		Arbre les_paradates_arbre =  new Arbre("");


		Arbre paradate1 =null;
		Arbre paradate2 =null;

		Arbre paradate1_arbre,paradate2_arbre;
		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:205:49: (paradate1= paradate ( CONJ paradate2= paradate )* )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:206:3: paradate1= paradate ( CONJ paradate2= paradate )*
			{
			pushFollow(FOLLOW_paradate_in_paradates718);
			paradate1=paradate();
			state._fsp--;


							paradate1_arbre = paradate1;
							les_paradates_arbre.ajouteFils(paradate1_arbre);
						
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:211:3: ( CONJ paradate2= paradate )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==CONJ) ) {
					int LA8_1 = input.LA(2);
					if ( (LA8_1==ANNEE||LA8_1==JOUR||LA8_1==SIGN) ) {
						alt8=1;
					}

				}

				switch (alt8) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:211:4: CONJ paradate2= paradate
					{
					match(input,CONJ,FOLLOW_CONJ_in_paradates728); 
					pushFollow(FOLLOW_paradate_in_paradates734);
					paradate2=paradate();
					state._fsp--;


									paradate2_arbre = paradate2;
									les_paradates_arbre.ajouteFils(new Arbre("", "OR"));
									les_paradates_arbre.ajouteFils(paradate2_arbre);
								
					}
					break;

				default :
					break loop8;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return les_paradates_arbre;
	}
	// $ANTLR end "paradates"



	// $ANTLR start "paradate"
	// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:220:1: paradate returns [Arbre leparadate_arbre = new Arbre(\"\")] : (jr= parajour )? ae= paraannee ;
	public final Arbre paradate() throws RecognitionException {
		Arbre leparadate_arbre =  new Arbre("");


		Arbre jr =null;
		Arbre ae =null;

		Arbre jr_arbre, ae_arbre;
		try {
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:221:36: ( (jr= parajour )? ae= paraannee )
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:222:2: (jr= parajour )? ae= paraannee
			{
			// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:222:2: (jr= parajour )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==JOUR) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// E:\\France\\LO17\\LO17_TD\\LO17_TD3\\TD3_Antl\\tal_sql.g:222:3: jr= parajour
					{
					pushFollow(FOLLOW_parajour_in_paradate769);
					jr=parajour();
					state._fsp--;

					 
								jr_arbre = jr;
								//leparadate_arbre.ajouteFils(new Arbre("", "OR"));
								leparadate_arbre.ajouteFils(jr_arbre);
							
					}
					break;

			}

			pushFollow(FOLLOW_paraannee_in_paradate787);
			ae=paraannee();
			state._fsp--;

			 
						ae_arbre = ae;
						leparadate_arbre.ajouteFils(ae_arbre);
					
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return leparadate_arbre;
	}
	// $ANTLR end "paradate"



	// $ANTLR start "parajour"
